partial jempi-base-windows